# openssl-cmake

./: .gitlab-ci.yml  0002-Configurations-10-main.conf-add-android64-mips64-tar.patch  0002-MIPS-assembly-pack-adapt-it-for-MIPS-32-64-R6.patch  CMakeLists.txt  README.md  TargetArch.cmake  building_env.py  openssl-android-clang.patch  openssl-config.cmake
cmake/: BuildOpenSSL.cmake  ByproductsOpenSSL.cmake  PatchOpenSSL.cmake  PrebuiltOpenSSL.cmake  TargetArch.cmake
patches/: 0001-Configurations-10-main.conf-add-android64-x86_64-tar.patch  0001-Fix-failing-cms-test-when-no-des-is-used.patch  0002-Fix-test_cms-if-DSA-is-not-supported.patch  0004-modes-asm-ghash-armv4.pl-improve-interoperability-wi.patch  0005-Only-release-thread_local-key-if-we-created-it.patch  openssl-android-clang.patch  openssl-fix-armv4.patch
scripts/: building_env.py  commit_result.sh  update_version.sh  upload_result.sh
